--- a/content/posts/201903/20190314.md
+++ b/content/posts/201903/20190314.md
@@ -1,7 +1,11 @@
 ---
-title: "Composerでのちょっとした楽"
+title: "Composer でのちょっとした楽"
 date: 2019-03-17T20:20:38+09:00
 draft: false
+toc: false
+images:
+tags:
+  - untagged
 ---
 
 ## Composer がある環境
