update : Vueの記事追加

--- a/content/posts/201903/201903xx2.md
+++ b/content/posts/201903/201903xx2.md
@@ -50,6 +50,30 @@ priintln("何か")
 
 ってな感じですかね。比較すると色々と面白かったりするんで比較しながら`PHP`ならこう書くけど`Go`ならどう書くのかな？って考えながら進めるといいといつも思っている。なので何かしらの言語の基本的概念やできることなどを理解、把握してないと他の言語の学習しても結果力にならないとおもう。ってことで進める。
 
+## 型がある人生それは素晴らしきかな
+
+下記が`int`型の変数定義
+
+```go
+var number int
+```
+
+そう。他の型付け言語と似てますな。素晴らしき
+
+以下が文字列の変数定義
+
+```go
+var name string
+```
+
+そう Go ならできちゃうんだ
+(小物感半端ない)
+
 ## 小さくまとまった package
 
 ってイメージを最初持った。各 file が
+
+### 参考記事一覧
+
+[POSTD Go 言語がダメな理由](https://postd.cc/why-go-is-not-good/)
+[Go 言語:文法基礎まとめ](https://qiita.com/HiromuMasuda0228/items/65b9a593275f769f6b69)
