--- a/content/posts/201903/20190331.md
+++ b/content/posts/201903/20190331.md
@@ -57,3 +57,60 @@ mapActions を使用するので store を追加する必要がある。先に`m
 今回の大本命。ここまでの Vuex 自体は、出てはきているがなぜ必要なのか、何をするものなのかって言うのがここで解説をしてくださっている。
 
 若干疑問なのは、HeadComp の title を computed で mapGetters？別にキャッシュする必要なくない？って思って公式見たらどうやらお作法っぽい
+
+あと mapgetters の記述が人によって結構異なっている。おおよそは。`module-type`ってフォルダ以下にファイルを作成してそれらを import してッシ要している感じ。作成したファイルには、`export default`で const を export している感じ
+
+### mapGetters を実装
+
+```javascript
+computed: mapGetters({
+  title: "getTitle"
+})
+```
+
+と書きます。ここの書き方が色々とあるっぽい。`spread peretor`を使用した方法とかね
+下記のような書き方もできます。
+
+```javascript
+computed: {
+  ...mapGetters(['title'])
+}
+```
+
+自分的には、こちらの方がスッキリかなーと、ただ上の書き方だとそれをする上でどんなメソッドを呼ぶかわかるからケースバイケースなのかなーって思う。
+
+### ES6 はしっかりと学んでおくのが吉
+
+今回 mapGetters で使用した`spread operator`を使用している。JS と言えば mozilla!!!!と言うことでこちらのリファレンスを参考して[スプレッド構文](https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Operators/Spread_syntax)
+
+まぁー iterable って単語は、大切なのでこの際覚えておくといいかもねーと思いましたな。
+
+### Store に書く主な 4 つ
+
+- state : 状態データ
+- mutations : 状態の更新する処理
+- getters : 状態を取得する処理
+- actions : 非同期処理(mutations を呼び出す)
+
+おっ？mapActions, mapGetters は、やった。のこりの二つもヘルパーがあると。そりゃそうかってな。
+
+## いつも脱線しかける
+
+昔から一つのことに集中するとまぁー何時間でも平気なんだけども調べ物していると基本的に芋づる式にいろんな言葉、概念、繋がり、関連、共通項などなど気になり始めて調べまくって結果自分の中で index が大量に生成される。
+
+学習する上で大切と思っているのは、以下
+
+`把握`, `認識`, `8割`, `書き換え・置き換え`, `index集め`
+
+かなーって思っている。完璧に理解しようなどと恐れ多く(むしろ世の中の人の 9 割が完璧に理解なんてしてないと思っている)専門家でもなければ研究者でもなく、また学者でもないので
+
+把握して使えるように理解して、集めた断片的知識を一つにどんどんつないでいって知識の層を深めていくのが大事だと思う。
+
+んで何事も 8 割くらいの力で 8 割(仕事内容的に網羅している)の完成度で 8 割の理解でいいと思っている。
+
+は？なんでと思う人もいるかもしれないけどその人ってたぶん人に説明できない人ならばそれって結果理解しているとは言えない。結果 8-9 割レベルってこと
+んじゃ最初から 8 割で業務こなせて人よりスキルがつくならそれが一番
+
+人手不足の今の時代において何かに特化するから広く中深く(ちゅうふかく)人より頭一個抜けているエンジニアを目指すかどちらかと思う。
+
+自分の今のスキル感は、そこにたどり着けていないからスキルのボトムアップと知識という index を集めまくる日々です。
