update : 次の記事の一部修正

--- a/content/posts/201903/2019033x.md
+++ b/content/posts/201903/2019033x.md
@@ -77,15 +77,15 @@ computed: {
 }
 ```
 
-自分的には、こちらの方がスッキリかなーと、ただ上の書き方だとそれをする上でどんなメソッドを呼ぶかわかるからケースバイケースなのかなーって思う。
+自分的には、こちらの方がスッキリかなーと、ただ上の書き方だとそれをする上でどんなメソッドを呼ぶかわかるからケースバイケースなのかなーとも思う。
 
 ### ES6 はしっかりと学んでおくのが吉
 
 今回 mapGetters で使用した`spread operator`を使用している。JS と言えば mozilla!!!!と言うことでこちらのリファレンスを参考して[スプレッド構文](https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Operators/Spread_syntax)
 
-まぁー iterable って単語は、大切なのでこの際覚えておくといいかもねーと思いましたな。
+まぁー iterable って単語は、大切なのでこの際覚えておくといいかもねーと思いましたな。(初心者の方は特に。自分も人に説明できるレベルには至っていない)
 
-### Store に書く主な 4 つ
+### ちょっと Tips Store に書く主な 4 つ
 
 - state : 状態データ
 - mutations : 状態の更新する処理
@@ -93,6 +93,8 @@ computed: {
 - actions : 非同期処理(mutations を呼び出す)
 
 おっ？mapActions, mapGetters は、やった。のこりの二つもヘルパーがあると。そりゃそうかってな。
+
+細かな話は、また別の投稿にしようと思う。
 
 ## いつも脱線しかける
 
