update : 明日の記事の下書き

--- a/content/posts/201904/2019040x.md
+++ b/content/posts/201904/2019040x.md
@@ -64,3 +64,43 @@ root の getters を使用できるってことかな。今その事案が頭に
 最初は、まず見本通りに進めます。
 
 ここも面白い箇所かなと個人的には感じてます。
+
+先ほどと同様な書き方で進めます。
+
+button をアロー関数で記述したが今回も同じように記述する。
+computed に関しては、ほぼみほ通りに書きましたが以下の箇所のみ書き換えた
+
+```javascript
+...mapGetters('Textarea', ['error'])
+```
+
+とした
+次に store の記述
+
+```javascript
+const Textare = {
+  namespaced: true,
+  state: {
+    errorMsg: "入力は必須です"
+  },
+  getters: {
+    error: (state, getters, rootState) => {
+      if (rootState.errorFlag) {
+        return null
+      } else {
+        return state.errorMsg
+      }
+    }
+  }
+}
+```
+
+アロー関数を今後も使っていきたいですね。書いてて気持ちいのと目に優しいコードと感じる。(個人的感想)
+
+ここで chrome の拡張機能を使用して Vue の中が確認できるんで積極的に確認していくことが大切！！
+
+## 確認ボタンを押してテキストエリアを切り替え
+
+この箇所含めて残り大きく分けて 2 個でのセクションですね。
+
+先にこの確認ボタン押下後の挙動に関しては、学びが多そうな箇所ですね。
