--- a/content/posts/201904/2019040x.md
+++ b/content/posts/201904/2019040x.md
@@ -1,8 +1,48 @@
 ---
-title: "2019040x"
+title: "Vuexに挑戦4"
 date: 2019-04-03T22:27:22+09:00
 showDate: true
 draft: true
-tags: ["blog","story"]
+tags: ["Vuex", "入門"]
 ---
 
+## 前回までのあらすじ
+
+Form の制御って箇所まで行いました。次は、テキストエリアの切り替えです。
+
+## :is とは？
+
+お手本の Qiita の記事には補足がないので初心者は「ん？」となるでしょう。単純にこれは、　 Vue が用意している省略機能の一つで完全な構文は`v-bind:is`です。(間違ってたらすみません)
+
+こうやって世間の目にさらされる場所に書く際は、間違えがないだろうかとちゃんと調べて動作確認しってことをするため体系的に頭にあったことが正しい知識として登録されることに意味があると思っている。
+
+あとは、お手本をもとに微妙に変えた書き方(spread operator)などで書きなおしつつ動作確認。
+
+このブログもそうだけど基本自宅では、VSCode を使用しているんだけど Vue で mapGetters を記述した際に import してくれるのはいいのだが`template`の中にぶっこまれるのはどうして。。。。
+
+お手本のまま記述を大方終え動作確認をするとアプリっぽい感じになってきましたね。
+
+## thanks ページの作成
+
+この章で最後ですな。
+
+お手本通りの実装をすすめます。
+ただ個人的にふと思ったのが`Thanks.vue`にて mapActions, mapGetters を import しているけどもこれ消しても動くわけです。何か意図があったのかな？
+
+単純この file って最後のページだから何かイベント等は、発生しないと思う。
+
+あと一点`rootState.setpCount == 2`の箇所。個人的には厳密に判定してほしので`===`しました。
+
+いうてここは、数値しか来ないのは、わかっているけども。基本的に業務でも`==`は使用しないようにしているため。ここも 3 個にした。
+
+## 今回の学び
+
+全体像は、掴めた。ただ state 関連は、色々と書き方がある点を知れたのと Vue がなぜ人気があるかなんとなくわかった。
+
+感想が短い・・・・
+
+## さて次は何をやろうかな。
+
+ちょっとまえに Laravel と Vue の instagram clone の記事がバズってたからそれを考えたは考えたがんー悩みどころだな。ただひたすら時間がかかりそうだ。
+
+それか今回のアプリのように比較的細かくあーだこーだ書くのはやめて、修正を加えた箇所やお手本と違う方法を試した箇所だけピックアップするようにするか。The memo 的な投稿を一個作成するだけにするか実に悩めかしい。
