リンク追加

--- a/content/posts/201906/20190626.md
+++ b/content/posts/201906/20190626.md
@@ -61,3 +61,7 @@ module.exports = {
 最終的には、サーバーを立ち上げれば`Hello World`が確認できます。
 
 途中で確認自体はできているんで後半は、GitHub ページで表示するための手順を含めてます。
+
+＃＃ Link
+
+- [公式サイト](https://vuepress.vuejs.org/)
