--- a/content/posts/201906/20190626.md
+++ b/content/posts/201906/20190626.md
@@ -50,11 +50,11 @@ touch .vuepress/config.js
 base: '/dirName/' // GitHub Pages の公開ディレクトリ
 dest: 'docs/', // build 時の出力先指定
 
-```
+```javascript
 module.exports = {
-  title: 'GitHub Pages product by vuepress', // 公開ページのタイトル
-  desctription: 'VuePress 挑戦', // ページの説明
-  dest: 'docs/', // build字の出力先指定
+  title: "GitHub Pages product by vuepress", // 公開ページのタイトル
+  desctription: "VuePress 挑戦", // ページの説明
+  dest: "docs/" // build字の出力先指定
 }
 ```
 
